fixed issue on mobile, nav now aligns in center

--- a/styles/sass/_media-queries.scss
+++ b/styles/sass/_media-queries.scss
@@ -118,8 +118,7 @@
     }
 
     .main-nav {
-        display: flex;
-        justify-content: center;
+        justify-items: center;
         width: 100%;
         display: none;
     }
